trying to fix alignment on backside of cards

--- a/destinations.css
+++ b/destinations.css
@@ -152,36 +152,6 @@ footer a:hover {
   background-color: white; /* Default background for all cards */
 }
 
-.label-list {
-  margin-bottom: 10px;
-  text-align: left; /* Important! */
-}
-
-.label-list ul {
-  margin: 6px 0 0 20px;
-  padding: 0;
-  list-style: none; /* Disable default bullet */
-  text-align: left;
-}
-
-.label-list li {
-  position: relative;
-  padding-left: 1.2em;
-  margin-bottom: 4px;
-  line-height: 1.4;
-  text-align: left;
-}
-
-.label-list li::before {
-  content: "•";
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: #4a4e57;
-  font-size: 1em;
-  line-height: 1.4;
-}
-
 /* Flip Effect for Cards */
 .card-front {
   position: absolute;
@@ -237,7 +207,28 @@ footer a:hover {
   transform: rotateY(180deg); /* Hidden by default for flipping */
   text-align: left;
 }
-  
+
+.label-list strong {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 6px;
+  text-align: left;
+  padding-left: 4px;
+}
+
+.label-list ul {
+  margin: 0;
+  padding-left: 20px; /* creates bullet indent */
+  list-style-type: disc;
+  text-align: left;
+}
+
+.label-list li {
+  margin-bottom: 4px;
+  line-height: 1.4;
+  text-align: left;
+}
+
 .card-back p {
   margin-bottom: 10px;
   color: #333;
